@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.tvtoday_de" name="TV Today - Best of Mediatheken" version="1.5.1" provider-name="realvito">
+<addon id="plugin.video.tvtoday_de" name="TV Today - Best of Mediatheken" version="1.5.2" provider-name="realvito">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="plugin.video.L0RE.arte" optional="true"/>
@@ -27,9 +27,10 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.5.1  (30.09.2019)[/COLOR][/B][CR]
+		<news>[B][COLOR orangered]Version 1.5.1+1.5.2  (30.09.2019)[/COLOR][/B][CR]
 - fixed: ARTE-Videos über "plugin.video.arteplussept" abspielen (Code verändert)
 - optimized: Einige kleine Scriptanpassungen
+- fixed: Github-Übertragungsfehler
 		</news>
 	</extension>
 </addon>
